--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "description": "Starter Files for HTML Prototypes",
   "main": "",
   "authors": [
+    "G. Jason Head <jason.h@smithbrosagency.com>",
     "Josh Clarke <josh.c@smithbrosagency.com>"
   ],
   "license": "MIT",
@@ -21,13 +22,5 @@
   },
   "devDependencies": {
     "modular-scale": "^3.0.2"
-  },
-    "overrides": {
-        "jquery": {
-            "ignore": true
-        },
-        "object-fit-images": {
-          "main":"dist/ofi.js"
-        }
-    }
+  }
 }
